--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
+        "klearvue/namecaselib": "^1.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.15.0"
     },
     "require-dev": {
